feat: add navbar

--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "format": "pnpm prettier --write .",
-    "commit":"pnpm lint && pnpm run format && git add . && git commit -m $*"
+    "commit": "pnpm lint && pnpm run format && git add . && git commit -m $*"
   },
   "dependencies": {
+    "@headlessui/react": "1.5.0",
+    "@heroicons/react": "1.0.6",
     "next": "12.1.5",
     "react": "18.0.0",
     "react-dom": "18.0.0"
@@ -22,6 +24,7 @@
     "autoprefixer": "10.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
+    "eslint-plugin-react": "7.29.4",
     "nanoid": "3.3.3",
     "postcss": "8.4.12",
     "prettier": "2.6.2",
