--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,20 @@
 {
-  "extends": "next/core-web-vitals",
+  "parserOptions": {
+    "ecmaFeatures": {
+      "jsx": true
+    },
+    "ecmaVersion": "latest",
+    "sourceType": "module"
+  },
+  "extends": ["next/core-web-vitals", "plugin:react/recommended"],
   "rules": {
     "prefer-const": "error",
     "no-console": "warn",
     "semi": "warn",
     "no-loop-func": "warn",
     "no-alert": "warn",
-    "no-await-in-loop": "warn"
+    "no-await-in-loop": "warn",
+    "react/react-in-jsx-scope": "off",
+    "no-unused-vars": "error"
   }
 }
