wip: form submission

--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "1.5.0",
     "@heroicons/react": "1.0.6",
+    "formik": "^2.2.9",
     "next": "12.1.5",
     "react": "18.0.0",
-    "react-dom": "18.0.0"
+    "react-dom": "18.0.0",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@types/node": "17.0.25",
