--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@headlessui/react": "1.5.0",
     "@heroicons/react": "1.0.6",
+    "@prisma/client": "^4.3.1",
     "formik": "^2.2.9",
     "next": "12.1.5",
     "react": "18.0.0",
@@ -33,6 +34,7 @@
     "nanoid": "3.3.3",
     "postcss": "8.4.12",
     "prettier": "2.6.2",
+    "prisma": "^4.3.1",
     "tailwindcss": "3.0.24",
     "typescript": "4.6.3"
   }
