feat: save url to db

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,6 +32,9 @@
       "@/utils/*": [
         "src/utils/*"
       ],
+      "@/lib/*": [
+        "src/lib/*"
+      ],
       "@/types/*": [
         "src/types/*"
       ],
