--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@types/react": "18.0.5",
     "@types/react-dom": "18.0.1",
     "autoprefixer": "10.4.4",
+    "babel-plugin-superjson-next": "^0.4.4",
     "eslint": "8.13.0",
     "eslint-config-next": "12.1.5",
     "eslint-plugin-react": "7.29.4",
@@ -35,6 +36,7 @@
     "postcss": "8.4.12",
     "prettier": "2.6.2",
     "prisma": "^4.3.1",
+    "superjson": "^1.10.0",
     "tailwindcss": "3.0.24",
     "typescript": "4.6.3"
   }
